[package]
name = "cd-webhooks-forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
axum = "0.7.2"
base64 = "0.21.5"
hex = "0.4.3"
http-body-util = "0.1.0"
opentelemetry-tracing-utils = "0.1.0"
reqwest = { version = "0.11.23", default-features = false, features = [
	"rustls-tls",
	"json",
] }
ring = "0.17.7"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"

[dev-dependencies]
wiremock = "0.5.22"
test-log = { version = "0.2.14", features = [
	"trace",
], default-features = false }
