[package]
name = "cd-webhooks-forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
base64 = "0.21.5"
futures = "0.3.30"
hex = "0.4.3"
http = "1.0.0"
http-body-util = "0.1.0"
hyper = "1.1.0"
hyper-util = { version = "0.1.2", features = ["client", "client-legacy"] }
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
opentelemetry-tracing-utils = { version = "0.3.0" }
ring = "0.17.7"
serde = "1.0.194"
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"

[dev-dependencies]
wiremock = "0.5.22"
test-log = { version = "0.2.14", features = [
	"trace",
], default-features = false }
