[package]
name = "cd-webhooks-forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
base64 = "0.22.0"
futures = "0.3.30"
hex = "0.4.3"
http = "1.0.0"
http-body-util = "0.1.1"
hyper = "1.2.0"
hyper-util = { version = "0.1.3", features = ["client", "client-legacy"] }
opentelemetry-stdout = { version = "0.26.0", features = ["trace"] }
opentelemetry-tracing-utils = { version = "0.5" }
reqwest = { version = "0.12.9", features = [
	"rustls-tls",
], default-features = false }
reqwest-middleware = "0.3.3"
reqwest-tracing = { version = "0.5.3", features = ["opentelemetry_0_24"] }
ring = "0.17.7"
serde = "1.0.194"
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.5.0"
tracing = "0.1.40"

[dev-dependencies]
wiremock = "0.6.0"
test-log = { version = "0.2.15", features = [
	"trace",
], default-features = false }

# [patch.crates-io]
# opentelemetry-tracing-utils = { path = "../sg-rust-utils/packages/opentelemetry-tracing-utils" }
